--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ p,
 h1, h2, h3, h4, h5, h6,
 label,
 div {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif!important;
 }
 
 body{
